syntax = "proto3";

option csharp_namespace = "Draughts.Grpc";

package clienttoserver;

message IdentificationRequest {
	string name = 1;
	bytes password = 2;
	string address = 3;
}

message IdentificationResponse {
	bool success = 1;
}

message IsFree {
	uint32 port = 1;
}

message IdentName {
	string name = 1;
}

message GameInfo {
	string opponent = 1;
	string guid = 2;
}

message Move {
	string name = 1;
	string gameGuid = 2;
	string movement = 3;
	string options = 4;
}

message IsCorrect {
	string correct = 1;
}

service DraughtsService {
	rpc Identification (IdentificationRequest) returns (IdentificationResponse);
	rpc IsPortFree (IsFree) returns (IdentificationResponse);
	rpc NewRandomGame (IdentName) returns (GameInfo);
	rpc SendAMoveToAnother (Move) returns (IsCorrect);
}